Making text readable.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #44bb75;
+  		background-color: #fff;
 		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		color: #666;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #bb448a; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #666; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #bb448a; }
-    h3 { text-align: center; color: #bb448a; }
+		h2 { font-size: 1.5em; color: #666; }
+    h3 { text-align: center; color: #666; }
     a { color: #bb448a; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
@@ -55,7 +55,8 @@
     <h2>License</h2>
 <p>GPLv2</p>
 <h2>Authors</h2>
-<p>Jonathan Wilde<br/>Bjoern Buerstinghaus (translation to German)</p>
+<p>Jonathan Wilde
+<br/>Bjoern Buerstinghaus (translation to German)</p>
 <h2>Contact</h2>
 <p>jonathan+feedstats@speedbreeze.com</p>
 
